Updated to use new rest api for retrieving the list of avaliable streams.  Currently API is pointing to our public staging server

--- a/com.fswire.streaming.client/app.config
+++ b/com.fswire.streaming.client/app.config
@@ -18,7 +18,7 @@
                 <value>0.0.1</value>
             </setting>
             <setting name="StreamingHostName" serializeAs="String">
-                <value>www.fswire.com</value>
+                <value>staging.fswire.com</value>
             </setting>
             <setting name="ApiRoot" serializeAs="String">
                 <value>api/v1</value>
