Added basic support for FSWire Rest Api for getting stream history, also refactored namespaces and how the API is called including data transformations from json to objects

--- a/com.fswire.streaming.client/Settings.settings
+++ b/com.fswire.streaming.client/Settings.settings
@@ -12,7 +12,7 @@
       <Value Profile="(Default)">0.0.1</Value>
     </Setting>
     <Setting Name="StreamingHostName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">staging.fswire.com</Value>
+      <Value Profile="(Default)">www.fswire.com</Value>
     </Setting>
     <Setting Name="ApiRoot" Type="System.String" Scope="Application">
       <Value Profile="(Default)">api/v1</Value>
